[tool.poetry]
name = "groq-tutorials"
version = "0.1.0"
description = ""
authors = ["Falcon-Emperor <hafiz.usman.nasim.001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
groq = "^0.13.1"
python-dotenv = "^1.0.1"
instructor = "^1.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
